--- a/src/components/Moon/Moon.css
+++ b/src/components/Moon/Moon.css
@@ -1,8 +1,4 @@
 #canvas-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   width: 30rem;
   height: 30rem;
 }
@@ -33,10 +29,8 @@
 
 /* Responsive design for large mobile */
 @media (max-width: 600px) {
-
 }
 
 /* Responsive design for small mobile */
 @media (max-width: 350px) {
-
 }
